2011-02-23 Pierre Wieser <pwieser@trychlos.org>

	Move Nautilus-Actions configuration files to nautilus-actions/ subdir

	* src/core/na-settings.c (na_settings_new):
	* src/utils/na-gconf2key.sh.in: Updated accordingly.

	Implement execution mode property

	* m4/na-check-for-gtk.m4: Check for Gio-unix.

	* src/core/na-object-profile-factory.c: Improve translation comment.

	* src/core/na-tokens.c (execute_action_command): Display output.

2011-02-21 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-object.h:
	* src/core/na-object.c (na_object_get_hierarchy, na_object_free_hierarchy):
	Deprecated functions.

	* src/core/na-object-id.c (v_new_id): No more call na_object_get_hierarchy().

	Rewrite copy stack to get ride of iteration on class hierarchy

	* src/api/na-object-api.h
	(na_object_copy, na_object_get_hierarchy): Removed macros.

	* src/api/na-icontext.h:
	* src/core/na-icontext.c (na_icontext_copy): New function.

	* src/core/na-object.c (object_copy_iter, iter_on_class_hierarchy):
	* src/core/na-object-item.c (object_copy):
	* src/core/na-object-action.c (object_copy):
	* src/core/na-object-profile.c (object_copy):
	* src/core/na-object-menu.c (object_copy): Updated accordingly.

	Rewrite validity status check stack

	* src/api/na-icontext.h:
	* src/core/na-icontext.c (na_icontext_are_equal): New function.

	* src/core/na-factory-object.c (na_factory_object_is_valid):
	* src/core/na-object.c (iduplicable_is_valid):
	* src/core/na-object-id.c (object_is_valid):
	* src/core/na-object-id-factory.c:
	* src/core/na-object-item.c (object_is_valid):
	* src/core/na-object-action.c (object_is_valid):
	* src/core/na-object-profile.c (object_is_valid):
	* src/core/na-object-menu.c (object_is_valid): Updated accordingly.

	Rewrite modification status check stack

	* src/api/na-object-item.h:
	* src/core/na-object-item.c (na_object_item_are_equal): Removed function.

	* src/api/na-object.h:
	* src/core/na-factory-object.c: